fixed bugs, overflow, scripts and media.scss

--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -379,6 +379,9 @@
         }
     }
     .tabs {
+        &__content {
+            min-height: 320px;
+        }
         &__mainheader {
             font-size: 24px;
         }
